--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@ hs_err_pid*
 
 # Idea files
 /.idea/
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+# Do not ignore Gradle Wrapper
+!gradle/wrapper/gradle-wrapper.jar
