lec04: benchmark array lists using JMH

--- a/lec04-unsafe-jmh/build.gradle
+++ b/lec04-unsafe-jmh/build.gradle
@@ -6,5 +6,6 @@ sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
 dependencies {
-    testImplementation 'junit:junit'
+    testImplementation 'org.openjdk.jmh:jmh-core'
+    testAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess'
 }
