--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ allprojects {
                 mavenBom("org.springframework.boot:spring-boot-dependencies:${Versions.springBootDependencies}")
             }
             dependency("com.google.guava:guava:${Versions.guava}")
+            dependency("org.openjdk.jmh:jmh-core:${Versions.jmh}")
+            dependency("org.openjdk.jmh:jmh-generator-annprocess:${Versions.jmh}")
         }
     }
 
