--- a/lec04-unsafe-jmh/build.gradle
+++ b/lec04-unsafe-jmh/build.gradle
@@ -8,4 +8,12 @@ targetCompatibility = JavaVersion.VERSION_11
 dependencies {
     testImplementation 'org.openjdk.jmh:jmh-core'
     testAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
