--- a/lec05qa/build.gradle
+++ b/lec05qa/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter'
+    testImplementation group: 'org.assertj', name: 'assertj-core'
 }
 
 test {
